fix: Remove deprecated new URL()